<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- LAYOUT -->
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fullname"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH1"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH2"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/purple_700"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH2"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH3"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_fullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            android:digits=" .,qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/email"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH3"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH4"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/purple_700"
        app:boxStrokeErrorColor="@color/red"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH4"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH5"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/mobile_number"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH5"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH6"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/purple_700"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH6"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH7"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mobile_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:inputType="number|phone"
            android:hint="@string/hint_mobile"
            android:maxLength="11"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/dob"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH7"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH8"
        />

    <TextView
        android:id="@+id/tv_dob"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/guidelineV1"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH8"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH9"
        />

    <ImageView
        android:id="@+id/img_date_picker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/select_date"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineV1"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH8"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH9"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/age"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH9"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH10"
        />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH10"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH11"
        tools:ignore="RtlSymmetry" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gender"
        android:textSize="15sp"
        android:gravity="bottom"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH11"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH12"
        />

    <Spinner
        android:id="@+id/spinner_gender"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH12"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH13"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/submit_button"
        android:textSize="30sp"
        app:cornerRadius="20dp"
        app:rippleColor="@color/white"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintRight_toLeftOf="@+id/guidelineRight"
        app:layout_constraintTop_toBottomOf="@+id/guidelineH14"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH15"
        />


    <!-- VERTICAL GUIDES -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".2" />

    <!-- HORIZONTAL GUIDES -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".44" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".54" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".57" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".67" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".82" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".92" />


</androidx.constraintlayout.widget.ConstraintLayout>